# string_tests = executable(
#   'string_tests',
#   'string_tests.cpp',
#   include_directories: [public_headers],
#   link_with: bl_lib,
# )
# test('String Tests', string_tests)

# dyn_array_tests = executable(
#   'dynamic_array_tests',
#   'dynamic_array_tests.cpp',
#   include_directories: [public_headers],
#   link_with: bl_lib,
# )
# test('Dynamic Array Tests', dyn_array_tests)

option_tests = executable(
  'option_tests',
  'option_tests.cpp',
  include_directories: [public_headers],
  link_with: bl_lib,
)
test('Option Tests', option_tests)

result_tests = executable(
  'result_tests',
  'result_tests.cpp',
  include_directories: [public_headers],
  link_with: bl_lib,
)
test('Result Tests', result_tests)
