option_tests = executable(
  'option_tests',
  'option_tests.cpp',
  include_directories: [public_headers],
  link_with: bl_lib,
)
test('Option Tests', option_tests)

string_tests = executable(
  'string_tests',
  'string_tests.cpp',
  include_directories: [public_headers],
  link_with: bl_lib,
)
test('String Tests', string_tests)

dynamic_array_tests = executable(
  'dynamic_array_tests',
  'dynamic_array_tests.cpp',
  include_directories: [public_headers],
  link_with: bl_lib,
)
test('Dynamic Array Tests', dynamic_array_tests)

array_hashmap_tests = executable(
  'array_hashmap_tests',
  'array_hashmap_tests.cpp',
  include_directories: [public_headers],
  link_with: bl_lib,
)
test('Array HashMap Tests', array_hashmap_tests)
